--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "project_ui_hocphan1",
-    "short_name": "project_ui_hocphan1",
+    "name": "flutter_firebase",
+    "short_name": "flutter_firebase",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
